--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -3,7 +3,7 @@
     <div class="col-xs" *ngIf="user">
       <h1>{{'common.welcome_user'| translate: {username: user.firstName} }}</h1>
       <div class="home-header-button-container">
-        <a routerLink="{{JARoutes.user.url()}}" class="medium-button-light-size btn-secondary-light btn-small btn">{{'common.edit_profile'| translate}}</a><br>
+        <a routerLink="{{JARoutes.user.url([user.id])}}" class="medium-button-light-size btn-secondary-light btn-small btn">{{'common.edit_profile'| translate}}</a><br>
         <a routerLink="{{JARoutes.jobs.url(['1'])}}" class="medium-button-light-size btn-primary-light btn-small btn">{{'menu.main.find_assignment'| translate}}</a>
       </div>
     </div>
@@ -46,7 +46,7 @@
       <h2>{{'home_page.user_jobs_slider.title' | translate}}</h2>
     </div>
     <div class="col-xs-12 user-jobs-show-all-button">
-      <span routerLink="{{JARoutes.userJobs.url()}}">{{'common.show_all' | translate | lowercase}} > <i class="icon-ic-arrow-right"></i></span>
+      <span routerLink="{{JARoutes.userJobs.url([user.id])}}">{{'common.show_all' | translate | lowercase}} > <i class="icon-ic-arrow-right"></i></span>
     </div>
     <div class="col-xs-12 jobs-slider" align="center">
       <div *ngFor="let userJob of userJobs" class="item-container clickable" [routerLink]="['/job', userJob.job.id]">
@@ -120,7 +120,7 @@
           {{'start.instruction_section.slide_2.text_4' | translate}}
         </li>
       </ul>
-      <div routerLink="{{JARoutes.user.url()}}" class="btn-secondary-light btn-medium btn">{{'common.start_here' | translate}}</div>
+      <div routerLink="{{JARoutes.registerUser.url()}}" class="btn-secondary-light btn-medium btn">{{'common.start_here' | translate}}</div>
     </div>
   </div>
 
