Bugfix: wrong cookie-about route name

--- a/src/app/components/cookie-bar/cookie-bar.component.html
+++ b/src/app/components/cookie-bar/cookie-bar.component.html
@@ -2,7 +2,7 @@
   <div class="cookie-message-inner">
     <p class="fs-m0">
       {{'cookies.description' | translate}}
-      <a class="read-more fs-m0" routerLink="{{JARoutes.cookies-about.url()}}">{{'cookies.read_more' | translate}}</a>
+      <a class="read-more fs-m0" routerLink="{{JARoutes.aboutCookies.url()}}">{{'cookies.read_more' | translate}}</a>
     </p>
     <div class="cookies-button">
       <button type="button" class="btn-secondary-light btn-small btn fs-m0" (click)="acceptCookiesConsent()">Accept</button>
