--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -12,13 +12,12 @@
 
     <form [formGroup]="loginForm" (ngSubmit)="submitForm(loginForm.value)">
       <div class="form-group material-group login-input-container" [ngClass]="{'has-error':!loginForm.controls['email_or_phone'].valid && loginForm.controls['email_or_phone'].touched}">
-        <input (keyup.enter)="submitForm(loginForm.value)" class="form-control material-input fs-m0" type="text" placeholder="{{'login.form.email_or_phone' | translate}}" [formControl]="loginForm.controls['email_or_phone']">
+        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="form-control material-input fs-m0" type="text" placeholder="{{'login.form.email_or_phone' | translate}}" [formControl]="loginForm.controls['email_or_phone']">
 
         <div *ngIf="loginForm.controls['email_or_phone'].hasError('required') && loginForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'login.form.email_or_phone.validation' | translate}}.</div>
-        <div *ngIf="errors.email_or_phone" class="alert alert-danger">{{errors.email_or_phone}}.</div>
       </div>
       <div class="form-group  material-group login-input-container" [ngClass]="{'has-error':!loginForm.controls['password'].valid && loginForm.controls['password'].touched}">
-        <input (keyup.enter)="submitForm(loginForm.value)" class="form-control material-input fs-m0" type="password" placeholder="{{'login.form.password' | translate}}" [formControl]="loginForm.controls['password']" maxlength="50">
+        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="form-control material-input fs-m0" type="password" placeholder="{{'login.form.password' | translate}}" [formControl]="loginForm.controls['password']" maxlength="50">
 
         <div *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched" class="alert alert-danger">{{'login.form.password.validation' | translate}}.</div>
         <div *ngIf="errors.password" class="alert alert-danger">{{errors.password}}</div>
