forgot pasword server error handling and submit on enter press

--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -13,9 +13,10 @@
 
     <form [formGroup]="forgotPasswordForm" (ngSubmit)="submitForm(forgotPasswordForm.value)">
       <div class="form-group material-group forgot-password-input-container" [ngClass]="{'has-error':!forgotPasswordForm.controls['email_or_phone'].valid && forgotPasswordForm.controls['email_or_phone'].touched}">
-        <input class="form-control material-input fs-m0" type="text" placeholder="{{'login.form.email_or_phone' | translate}}" [formControl]="forgotPasswordForm.controls['email_or_phone']">
+        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.email_or_phone = ''" class="form-control material-input fs-m0" type="text" placeholder="{{'login.form.email_or_phone' | translate}}" [formControl]="forgotPasswordForm.controls['email_or_phone']">
 
         <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'login.form.email_or_phone.validation' | translate}}.</div>
+        <div *ngIf="errors.email_or_phone" class="alert alert-danger">{{errors.email_or_phone}}</div>
       </div>
       <div class="form-group forgot-password-button-container">
         <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'login.forgot_password.error' | translate}}</div>
