Added "home_page.jobs_applied_for.title" to i8n

--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -71,7 +71,7 @@
   <div class="row" *ngIf="user">
     <div class="home-jobs-applied-for-header-wrapper col-xs-12">
       <div class="home-jobs-applied-for-header col-xs-10">
-        <h3>Jobs applied for</h3>
+        <h3>{{'home_page.jobs_applied_for.title' | translate}}</h3>
       </div>
     </div>
 
