--- a/src/app/views/user/user-settings/user-settings.component.html
+++ b/src/app/views/user/user-settings/user-settings.component.html
@@ -5,11 +5,13 @@
 
     <div class="user-profile-subheader-info-container row">
       <div class="user-profile-subheader-info-image-container">
-        <input type="file" id="image-filename" name="imageFilename" class="file" (change)="onProfileImageFilenameChange($event)" accept="image/*">
+        <input type="file" id="image-filename" name="imageFilename" class="file" (change)="onProfileImageFilenameChange($event)" accept="image/jpeg,image/jpg,image/gif,image/png">
         <div *ngIf="!user.profile_image" class="icon-camera"><i class="fa fa-camera" aria-hidden="true"></i></div>
         <div *ngIf="user.profile_image" class="user-info-image" [ngStyle]="{'background-image': 'url(' + user.profile_image.imageUrl + ')'}"></div>
       </div>
       <div class="user-profile-subheader-info-name-container"><span>{{user.firstName}} {{user.lastName}}</span></div>
+      <div class="center user-profile-subheader-info-success-msg" *ngIf="imageSaveSuccess">{{'user.profile.picture.upload.success' | translate}}</div>
+      <div class="center user-profile-subheader-info-error-msg" *ngIf="imageSaveFail">{{'user.profile.picture.upload.fail' | translate}}</div>
     </div>
   </div>
 
