Refactored subheader styles to headers.scss

--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -1,27 +1,22 @@
-<div>
+<div class="forgot-password-container">
 
-  <div class="forgot-password-header row">
-    <!-- All Questions -->
-    <div class="col-xs-12">
-      <h3>
-        {{'login.forgot_password' | translate}}
-      </h3>
-    </div>
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{'forgot.password.title' | translate}}</h3>
   </div>
 
   <div class="forgot-password-form-container">
 
     <form [formGroup]="forgotPasswordForm" (ngSubmit)="submitForm(forgotPasswordForm.value)">
       <div class="form-group material-group forgot-password-input-container" [ngClass]="{'has-error':!forgotPasswordForm.controls['email_or_phone'].valid && forgotPasswordForm.controls['email_or_phone'].touched}">
-        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.email_or_phone = ''" class="form-control material-input fs-m0" type="text" placeholder="{{'login.form.email_or_phone' | translate}}" [formControl]="forgotPasswordForm.controls['email_or_phone']">
+        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.email_or_phone = ''" class="forgot-password-form-text-input form-control material-input fs-m0" type="text" placeholder="{{'forgot.password.form.email.or.phone.placeholder' | translate}}" [formControl]="forgotPasswordForm.controls['email_or_phone']">
 
-        <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'login.form.email_or_phone.validation' | translate}}.</div>
+        <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'forgot.password.form.email.or.phone.validation.required' | translate}}.</div>
         <div *ngIf="errors.email_or_phone" class="alert alert-danger">{{errors.email_or_phone}}</div>
       </div>
-      <div class="form-group forgot-password-button-container">
-        <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'login.forgot_password.error' | translate}}</div>
-        <button type="submit" [disabled]="!forgotPasswordForm.valid" class="btn-primary btn-small btn">{{'common.submit' | translate}}</button>
-        <a class="fs-m0" routerLink="{{JARoutes.login.url()}}">{{'common.login' | translate}}</a>
+      <div class="form-group forgot-password-form-button-container">
+        <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'forgot.password.submit.error' | translate}}</div>
+        <button type="submit" [disabled]="!forgotPasswordForm.valid" class="forgot-password-form-button btn-primary btn-small btn">{{'forgot.password.form.submit.button' | translate}}</button>
+        <a class="forgot-password-form-link fs-m0" routerLink="{{JARoutes.login.url()}}">{{'forgot.password.login.link' | translate}}</a>
       </div>
     </form>
 
