--- a/src/app/views/user/user-register/user-register.component.html
+++ b/src/app/views/user/user-register/user-register.component.html
@@ -1,6 +1,7 @@
 <div class="register-container">
-  <div class="register-header-container">
-    <h3>{{"user.register.title" | translate}}</h3>
+
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{"user.register.title" | translate}}</h3>
   </div>
 
   <div class="register-form-outer-container">
