--- a/src/styles.scss
+++ b/src/styles.scss
@@ -4,6 +4,7 @@
 @import './app/styles/typography';
 @import './app/styles/tooltips';
 @import './app/styles/bootstrap-modifications';
+@import './app/styles/headers';
 
 body,
 html {
