--- a/src/app/views/contact/contact.component.html
+++ b/src/app/views/contact/contact.component.html
@@ -1,12 +1,7 @@
 <div class="container-fluid">
 
-  <div class="contact-header row">
-    <!-- All Questions -->
-    <div class="col-xs-12">
-      <h3>
-        {{"contact" | translate}}
-      </h3>
-    </div>
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{"contact" | translate}}</h3>
   </div>
 
   <div class="contact-form-container">
