--- a/src/app/views/cookies-about/cookies-about.component.html
+++ b/src/app/views/cookies-about/cookies-about.component.html
@@ -1,12 +1,7 @@
 <div class="container-fluid">
 
-  <div class="cookies-about-header row">
-    <!-- All Questions -->
-    <div class="col-xs-12">
-      <h3>
-        {{ 'cookies.info.title' | translate }}
-      </h3>
-    </div>
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{ 'cookies.info.title' | translate }}</h3>
   </div>
 
   <div class="cookies-about-container row">
