--- a/src/app/views/faq/faq.component.html
+++ b/src/app/views/faq/faq.component.html
@@ -1,14 +1,7 @@
 <div class="container-fluid">
-
-  <div class="faq-header row">
-    <!-- All Questions -->
-    <div class="col-xs-12">
-      <h3>
-        {{'faq' | translate}}
-      </h3>
-    </div>
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{'faq' | translate}}</h3>
   </div>
-
   <div class="faq-list-container row">
     <div>
       <ul>
