--- a/src/app/views/login/login.component.html
+++ b/src/app/views/login/login.component.html
@@ -1,30 +1,28 @@
 <div class="login-container">
 
-  <div class="login-header-container">
-    <div class="col-xs-12">
-      <h3>
-        {{'login.title' | translate}}
-      </h3>
-    </div>
+  <div class="sub-header-container">
+    <h3 class="sub-header-title">{{'login.title' | translate}}</h3>
   </div>
 
   <div class="login-form-container">
 
     <form [formGroup]="loginForm" (ngSubmit)="submitForm(loginForm.value)">
-      <div class="form-group material-group login-input-container" [ngClass]="{'has-error':!loginForm.controls['email_or_phone'].valid && loginForm.controls['email_or_phone'].touched}">
-        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="form-control material-input fs-m0" type="text" placeholder="{{'login.form.email_or_phone' | translate}}" [formControl]="loginForm.controls['email_or_phone']">
+      <div class="form-group material-group login-form-input-container" [ngClass]="{'has-error':!loginForm.controls['email_or_phone'].valid && loginForm.controls['email_or_phone'].touched}">
+        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="login-form-text-input form-control material-input fs-m0" type="text" placeholder="{{'login.form.email.or.phone.placeholder' | translate}}" [formControl]="loginForm.controls['email_or_phone']">
 
-        <div *ngIf="loginForm.controls['email_or_phone'].hasError('required') && loginForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'login.form.email_or_phone.validation' | translate}}</div>
+        <div *ngIf="loginForm.controls['email_or_phone'].hasError('required') && loginForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'login.form.email.or.phone.validation.required' | translate}}</div>
       </div>
-      <div class="form-group  material-group login-input-container" [ngClass]="{'has-error':!loginForm.controls['password'].valid && loginForm.controls['password'].touched}">
-        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="form-control material-input fs-m0" type="password" placeholder="{{'login.form.password' | translate}}" [formControl]="loginForm.controls['password']" maxlength="50">
+      <div class="form-group  material-group login-form-input-container" [ngClass]="{'has-error':!loginForm.controls['password'].valid && loginForm.controls['password'].touched}">
+        <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.password = ''" class="login-form-text-input form-control material-input fs-m0" type="password" placeholder="{{'login.form.password.placeholder' | translate}}" [formControl]="loginForm.controls['password']"
+            maxlength="50">
 
-        <div *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched" class="alert alert-danger">{{'login.form.password.validation' | translate}}</div>
+        <div *ngIf="loginForm.controls['password'].hasError('required') && loginForm.controls['password'].touched" class="alert alert-danger">{{'login.form.password.validation.required' | translate}}</div>
         <div *ngIf="errors.password" class="alert alert-danger">{{errors.password}}</div>
       </div>
-      <div class="form-group login-button-container">
-        <button type="submit" [disabled]="!loginForm.valid" class="btn-primary btn-small btn">{{'common.login' | translate}}</button>
-        <a class="forgot-password fs-m0" routerLink="{{JARoutes.forgotPassword.url()}}">{{'login.forgot_password' | translate}}</a>
+      <div class="form-group login-form-button-container">
+        <button type="submit" [disabled]="!loginForm.valid" class="login-form-button btn-primary btn-small btn">{{'login.form.submit.button' | translate}}</button>
+        <a class="login-form-link fs-m0" routerLink="{{JARoutes.forgotPassword.url()}}">{{'login.form.forgot.password.link' | translate}}</a>
+        <a class="login-form-link fs-m0" routerLink="{{JARoutes.registerUser.url()}}">{{'login.form.register.link' | translate}}</a>
       </div>
     </form>
 
