--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -15,7 +15,8 @@
       </div>
       <div class="form-group forgot-password-form-button-container">
         <div *ngIf="displayErrorMessage" class="error-message fs-m0">{{'forgot.password.submit.error' | translate}}</div>
-        <button type="submit" [disabled]="!forgotPasswordForm.valid" class="forgot-password-form-button btn-primary btn-small btn">{{'forgot.password.form.submit.button' | translate}}</button>
+        <loading *ngIf="loadingSubmit"></loading>
+        <button *ngIf="!loadingSubmit" type="submit" [disabled]="!forgotPasswordForm.valid" class="forgot-password-form-button btn-primary btn-small btn">{{'forgot.password.form.submit.button' | translate}}</button>
         <a class="forgot-password-form-link fs-m0" routerLink="{{JARoutes.login.url()}}">{{'forgot.password.login.link' | translate}}</a>
       </div>
     </form>
