Add gradient color to job details page

--- a/src/app/views/job-details/job-details.component.scss
+++ b/src/app/views/job-details/job-details.component.scss
@@ -59,7 +59,7 @@
 }
 
 .job-status {
-  background: $color-primary-cerise;
+  background: linear-gradient($color-cerise-600, $color-primary-cerise);
   padding: 30px;
   color: white;
 }
