--- a/src/app/views/forgot-password/forgot-password.component.html
+++ b/src/app/views/forgot-password/forgot-password.component.html
@@ -10,7 +10,7 @@
       <div class="form-group material-group forgot-password-input-container" [ngClass]="{'has-error':!forgotPasswordForm.controls['email_or_phone'].valid && forgotPasswordForm.controls['email_or_phone'].touched}">
         <input (keyup.enter)="onEnterKeyUp()" (focus)="errors.email_or_phone = ''" class="forgot-password-form-text-input form-control material-input fs-m0" type="text" placeholder="{{'forgot.password.form.email.or.phone.placeholder' | translate}}" [formControl]="forgotPasswordForm.controls['email_or_phone']">
 
-        <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'forgot.password.form.email.or.phone.validation.required' | translate}}.</div>
+        <div *ngIf="forgotPasswordForm.controls['email_or_phone'].hasError('required') && forgotPasswordForm.controls['email_or_phone'].touched" class="alert alert-danger">{{'forgot.password.form.email.or.phone.validation.required' | translate}}</div>
         <div *ngIf="errors.email_or_phone" class="alert alert-danger">{{errors.email_or_phone}}</div>
       </div>
       <div class="form-group forgot-password-form-button-container">
