--- a/src/app/views/user/user-register/user-register.component.html
+++ b/src/app/views/user/user-register/user-register.component.html
@@ -14,9 +14,9 @@
 
         <div class="form-group material-group register-form-input-container" [ngClass]="{'has-error': (registerForm.controls['first_name'].touched && !registerForm.controls['first_name'].valid) || !serverValidationErrors.first_name}">
           <input class="form-control material-input" id="first_name" name="first-name-input" type="text" (focus)="serverValidationErrors.first_name = ''" placeholder="{{'user.register.form.first.name.placeholder' | translate}}" [formControl]="registerForm.controls['first_name']">
-          <div *ngIf="registerForm.controls['first_name'].touched && registerForm.controls['first_name'].hasError('required')" class="alert alert-danger">{{'user.register.form.first.name.validation.required' | translate}}.</div>
-          <div *ngIf="registerForm.controls['first_name'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.first.name.validation.min.length' | translate}}.</div>
-          <div *ngIf="serverValidationErrors.first_name" class="alert alert-danger">{{serverValidationErrors.first_name}}.</div>
+          <div *ngIf="registerForm.controls['first_name'].touched && registerForm.controls['first_name'].hasError('required')" class="alert alert-danger">{{'user.register.form.first.name.validation.required' | translate}}</div>
+          <div *ngIf="registerForm.controls['first_name'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.first.name.validation.min.length' | translate}}</div>
+          <div *ngIf="serverValidationErrors.first_name" class="alert alert-danger">{{serverValidationErrors.first_name}}</div>
         </div>
 
         <div class="register-form-input-group-header">
@@ -24,9 +24,9 @@
 
         <div class="form-group material-group register-form-input-container" [ngClass]="{'has-error':  (registerForm.controls['last_name'].touched && !registerForm.controls['last_name'].valid) || !serverValidationErrors.last_name}">
           <input class="form-control material-input" id="last_name" name="last-name-input" type="text" (focus)="serverValidationErrors.last_name = ''" placeholder="{{'user.register.form.last.name.placeholder' | translate}}" [formControl]="registerForm.controls['last_name']">
-          <div *ngIf="registerForm.controls['last_name'].touched && registerForm.controls['last_name'].hasError('required')" class="alert alert-danger">{{'user.register.form.last.name.validation.required' | translate}}.</div>
-          <div *ngIf="registerForm.controls['last_name'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.last.name.validation.min.length' | translate}}.</div>
-          <div *ngIf="serverValidationErrors.last_name" class="alert alert-danger">{{serverValidationErrors.last_name}}.</div>
+          <div *ngIf="registerForm.controls['last_name'].touched && registerForm.controls['last_name'].hasError('required')" class="alert alert-danger">{{'user.register.form.last.name.validation.required' | translate}}</div>
+          <div *ngIf="registerForm.controls['last_name'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.last.name.validation.min.length' | translate}}</div>
+          <div *ngIf="serverValidationErrors.last_name" class="alert alert-danger">{{serverValidationErrors.last_name}}</div>
         </div>
 
         <div class="register-form-input-group-header">
@@ -34,8 +34,8 @@
 
         <div class="form-group material-group register-form-input-container" [ngClass]="{'has-error': (registerForm.controls['email'].touched && !registerForm.controls['email'].valid) || !serverValidationErrors.email}">
           <input class="form-control material-input" id="email" name="email" type="email" (focus)="serverValidationErrors.email = ''" placeholder="{{'user.register.form.email.placeholder' | translate}}" [formControl]="registerForm.controls['email']">
-          <div *ngIf="registerForm.controls['email'].touched && registerForm.controls['email'].hasError('required')" class="alert alert-danger">{{'user.register.form.email.validation.required' | translate}}.</div>
-          <div *ngIf="registerForm.controls['email'].hasError('pattern')" class="alert alert-danger">{{'user.register.form.email.validation.pattern' | translate}}.</div>
+          <div *ngIf="registerForm.controls['email'].touched && registerForm.controls['email'].hasError('required')" class="alert alert-danger">{{'user.register.form.email.validation.required' | translate}}</div>
+          <div *ngIf="registerForm.controls['email'].hasError('pattern')" class="alert alert-danger">{{'user.register.form.email.validation.pattern' | translate}}</div>
           <div *ngIf="serverValidationErrors.email" class="alert alert-danger">{{serverValidationErrors.email}}.</div>
         </div>
 
@@ -44,9 +44,9 @@
 
         <div class="form-group material-group register-form-input-container" [ngClass]="{'has-error': (registerForm.controls['phone'].touched && !registerForm.controls['phone'].valid)  || !serverValidationErrors.phone}">
           <input class="form-control material-input" id="phone" name="phone" type="text" (focus)="serverValidationErrors.phone = ''" placeholder="{{'user.register.form.phone.placeholder' | translate}}" [formControl]="registerForm.controls['phone']">
-          <div *ngIf="registerForm.controls['phone'].touched && registerForm.controls['phone'].hasError('required')" class="alert alert-danger">{{'user.register.form.phone.validation.required' | translate}}.</div>
-          <div *ngIf="registerForm.controls['phone'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.phone.validation.min.length' | translate}}.</div>
-          <div *ngIf="registerForm.controls['phone'].hasError('pattern')" class="alert alert-danger">{{'user.register.form.phone.validation.pattern' | translate}}.</div>
+          <div *ngIf="registerForm.controls['phone'].touched && registerForm.controls['phone'].hasError('required')" class="alert alert-danger">{{'user.register.form.phone.validation.required' | translate}}</div>
+          <div *ngIf="registerForm.controls['phone'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.phone.validation.min.length' | translate}}</div>
+          <div *ngIf="registerForm.controls['phone'].hasError('pattern')" class="alert alert-danger">{{'user.register.form.phone.validation.pattern' | translate}}</div>
           <div *ngIf="serverValidationErrors.phone" class="alert alert-danger">{{serverValidationErrors.phone}}.</div>
         </div>
 
@@ -75,7 +75,7 @@
           <autocomplete-dropdown [lookupType]="'list'" [enumList]="languages" [(touched)]="nativeLanguageInputTouched" [placeholder]="'user.register.form.native.language.placeholder' | translate" (dropdownListItemSelect)="registerForm.controls['native_language'].setValue($event)"
               [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel">
           </autocomplete-dropdown>
-          <div *ngIf="!registerForm.value.native_language && nativeLanguageInputTouched" class="alert alert-danger">{{'user.register.form.native.language.required' | translate}}.</div>
+          <div *ngIf="!registerForm.value.native_language && nativeLanguageInputTouched" class="alert alert-danger">{{'user.register.form.native.language.required' | translate}}</div>
           <div *ngIf="serverValidationErrors.language_ids" class="alert alert-danger">{{serverValidationErrors.language_ids}}</div>
         </div>
 
@@ -87,7 +87,7 @@
               [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel">
           </autocomplete-dropdown>
           <p class="register-form-input-description-text">{{'user.register.form.default.language.description' | translate}}</p>
-          <div *ngIf="!registerForm.value.default_language && defaultLanguageInputTouched" class="alert alert-danger">{{'user.register.form.default.language.required' | translate}}.</div>
+          <div *ngIf="!registerForm.value.default_language && defaultLanguageInputTouched" class="alert alert-danger">{{'user.register.form.default.language.required' | translate}}</div>
           <div *ngIf="serverValidationErrors.language_id" class="alert alert-danger">{{serverValidationErrors.language_id}}</div>
         </div>
 
@@ -100,7 +100,7 @@
           </autocomplete-dropdown>
           <input id="country_of_origin" name="country_of_origin" type="hidden" [(ngModel)]="registerForm.value.country_of_origin" [formControl]="registerForm.controls['country_of_origin']">
 
-          <div *ngIf="!registerForm.value.country_of_origin && countryOfOriginInputTouched" class="alert alert-danger">{{'user.register.form.country.of.origin.required' | translate}}.</div>
+          <div *ngIf="!registerForm.value.country_of_origin && countryOfOriginInputTouched" class="alert alert-danger">{{'user.register.form.country.of.origin.required' | translate}}</div>
           <div *ngIf="serverValidationErrors.country_of_origin" class="alert alert-danger">{{serverValidationErrors.country_of_origin}}</div>
         </div>
 
@@ -112,9 +112,9 @@
               maxlength="50">
           <input class="form-control material-input" id="repeat_password" name="repeat_password" type="password" (focus)="serverValidationErrors.password = ''" placeholder="{{'user.register.form.repeat.password.placeholder' | translate}}" [formControl]="registerForm.controls['repeat_password']"
               maxlength="50">
-          <div *ngIf="registerForm.controls['password'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.password.validation.min.length' | translate}}.</div>
-          <div *ngIf="registerForm.controls['password'].touched && registerForm.controls['password'].hasError('required')" class="alert alert-danger">{{'user.register.form.password.validation.required' | translate}}.</div>
-          <div *ngIf="passwordsSuppliedAndMisMatch()" class="alert alert-danger">{{'user.register.form.repeat.password.validation.mismatch' | translate}}.</div>
+          <div *ngIf="registerForm.controls['password'].hasError('minlength')" class="alert alert-danger">{{'user.register.form.password.validation.min.length' | translate}}</div>
+          <div *ngIf="registerForm.controls['password'].touched && registerForm.controls['password'].hasError('required')" class="alert alert-danger">{{'user.register.form.password.validation.required' | translate}}</div>
+          <div *ngIf="passwordsSuppliedAndMisMatch()" class="alert alert-danger">{{'user.register.form.repeat.password.validation.mismatch' | translate}}</div>
           <div *ngIf="serverValidationErrors.password" class="alert alert-danger">{{serverValidationErrors.password}}.</div>
         </div>
 
@@ -125,7 +125,7 @@
             <a href="/assets/terms/160520_2051-2_Anvandarvillkor_(sv).pdf" target="_blank"> PDF SV</a>
           </label>
           <input type="checkbox" id="terms" name="terms" class="material-input" [formControl]="registerForm.controls['accepted_terms_and_conditions']">
-          <div *ngIf="!registerForm.value.accepted_terms_and_conditions" class="alert alert-danger">{{'user.register.form.terms.validation.required' | translate}}.</div>
+          <div *ngIf="!registerForm.value.accepted_terms_and_conditions" class="alert alert-danger">{{'user.register.form.terms.validation.required' | translate}}</div>
         </div>
 
         <div class="register-form-button-container">
