--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -30,9 +30,7 @@
     <div class="col-xs-12 jobs-slider" align="center">
       <div *ngFor="let job of newJobs" class="item-container clickable" [routerLink]="['/job', job.id]">
         <div class="job-name">
-          <div>
-            <p>{{job.name}}</p>
-          </div>
+            <p>{{job.name | truncate : 35}}</p>
         </div>
         <div class="jobs-salary-container">
           {{job.hourlyPay.grossSalary * job.hours}} {{job.hourlyPay.currency}}
@@ -51,9 +49,7 @@
     <div class="col-xs-12 jobs-slider" align="center">
       <div *ngFor="let userJob of userJobs" class="item-container clickable" [routerLink]="['/job', userJob.job.id]">
         <div class="job-name">
-          <div>
-            <p>{{userJob.job.name}}</p>
-          </div>
+            <p>{{userJob.job.name | truncate : 35}}</p>
         </div>
 
         <div *ngIf="userJob.job_ended" class="jobs-salary-container user-jobs-salary-container-inactive">
