--- a/src/app/components/pager/pager.component.html
+++ b/src/app/components/pager/pager.component.html
@@ -4,8 +4,8 @@
     <i class="fa fa-chevron-left" aria-hidden="true"></i>
   </div>
 
-  <div class="col-xs-5ths">
-    <a (click)="onPreviousPageButtonClick()" class="pagination-button">
+  <div class="col-xs-5ths pagination-button">
+    <a (click)="onPreviousPageButtonClick()">
       <i class="fa fa-chevron-left" aria-hidden="true"></i>
     </a>
   </div>
@@ -14,8 +14,8 @@
     <p> {{currentPage}} / {{lastPage}} </p>
   </div>
 
-  <div class="text-right col-xs-5ths">
-    <a (click)="onNextPageButtonClick()" class="pagination-button">
+  <div class="text-right col-xs-5ths pagination-button">
+    <a (click)="onNextPageButtonClick()">
       <i class="fa fa-chevron-right" aria-hidden="true"></i>
     </a>
   </div>
