--- a/src/app/components/pager/pager.component.scss
+++ b/src/app/components/pager/pager.component.scss
@@ -7,6 +7,10 @@
   background-color: $color-gray-25;
   padding: 8px;
 
+  display: flex;
+  justify-content: center;
+  align-items: center;
+
   p {
     margin: 0;
   }
@@ -14,10 +18,12 @@
 
 .back-button {
   @include NavigationButtonProperties(left, $color-primary-cerise);
+  padding-top: 0;
 }
 
 .forward-button {
   @include NavigationButtonProperties(right, $color-primary-cerise);
+  padding-top: 0;
 }
 
 .pagination-text {
@@ -27,20 +33,8 @@
 }
 
 .pagination-button {
-  border: 1px solid $white;
-  border-radius: 17px;
-  padding: 0 10px;
-  line-height: 34px;
-  height: 34px;
-  display: inline-block;
-  text-transform: uppercase;
-  color: $white !important;
-  padding: 0 2em;
-  text-align: center;
-  background-color: $color-primary-cerise;
-  color: $white;
-  border: 1px solid $color-primary-cerise;
-  cursor: pointer; cursor: hand;
+  color: $color-primary-cerise;
+  cursor: pointer;
 }
 
 .navigation-left-arrow {
